--- a/IOSModelBay/Views&Controllers/Profile/Summary/Views/MB_SummaryTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Summary/Views/MB_SummaryTableViewCell.xib
@@ -21,8 +21,11 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D2W-nM-fi8">
-                        <rect key="frame" x="11" y="0.0" width="298" height="42"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="edit_sjieshao_up" translatesAutoresizingMaskIntoConstraints="NO" id="eNQ-sB-oFb">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="介绍" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xE-vt-bOH">
                                 <rect key="frame" x="12" y="0.0" width="60" height="42"/>
                                 <constraints>
@@ -33,7 +36,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="啦啦啦德玛西亚" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kq1-PU-kgW">
-                                <rect key="frame" x="72" y="13" width="226" height="16"/>
+                                <rect key="frame" x="72" y="13" width="248" height="16"/>
                                 <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="13"/>
                                 <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -41,24 +44,35 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="eNQ-sB-oFb" secondAttribute="trailing" id="4dK-DB-fMG"/>
                             <constraint firstItem="Kq1-PU-kgW" firstAttribute="leading" secondItem="5xE-vt-bOH" secondAttribute="trailing" id="CT4-QU-qqq"/>
                             <constraint firstItem="5xE-vt-bOH" firstAttribute="leading" secondItem="D2W-nM-fi8" secondAttribute="leading" constant="12" id="dbI-If-4I7"/>
                             <constraint firstItem="5xE-vt-bOH" firstAttribute="top" secondItem="D2W-nM-fi8" secondAttribute="top" id="dou-I1-3Db"/>
                             <constraint firstAttribute="trailing" secondItem="Kq1-PU-kgW" secondAttribute="trailing" id="e19-hZ-PlS"/>
                             <constraint firstAttribute="bottom" secondItem="5xE-vt-bOH" secondAttribute="bottom" id="gBP-sg-VNp"/>
+                            <constraint firstItem="eNQ-sB-oFb" firstAttribute="leading" secondItem="D2W-nM-fi8" secondAttribute="leading" id="gC8-rQ-OU7"/>
+                            <constraint firstItem="eNQ-sB-oFb" firstAttribute="top" secondItem="D2W-nM-fi8" secondAttribute="top" id="ggW-Je-TB6"/>
                             <constraint firstItem="Kq1-PU-kgW" firstAttribute="centerY" secondItem="5xE-vt-bOH" secondAttribute="centerY" id="joQ-Hd-M7J"/>
+                            <constraint firstItem="eNQ-sB-oFb" firstAttribute="leading" secondItem="5xE-vt-bOH" secondAttribute="trailing" id="rj0-UD-T2g"/>
+                            <constraint firstAttribute="bottom" secondItem="eNQ-sB-oFb" secondAttribute="bottom" id="yOh-mJ-3QT"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="rj0-UD-T2g"/>
+                            </mask>
+                        </variation>
                     </view>
                 </subviews>
                 <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="D2W-nM-fi8" secondAttribute="trailing" constant="11" id="jsl-Ba-9cb"/>
+                    <constraint firstAttribute="trailing" secondItem="D2W-nM-fi8" secondAttribute="trailing" id="jsl-Ba-9cb"/>
                     <constraint firstItem="D2W-nM-fi8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="mDP-gc-ebW"/>
-                    <constraint firstItem="D2W-nM-fi8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="vFW-rD-j1U"/>
+                    <constraint firstItem="D2W-nM-fi8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vFW-rD-j1U"/>
                     <constraint firstAttribute="bottom" secondItem="D2W-nM-fi8" secondAttribute="bottom" id="wnI-wo-dVQ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="dashLineImageView" destination="eNQ-sB-oFb" id="4tg-Xz-UsL"/>
                 <outlet property="mainLabel" destination="5xE-vt-bOH" id="ylQ-pJ-o7U"/>
                 <outlet property="mainLabelWidth" destination="GFG-jy-XuI" id="SUc-iR-AdP"/>
                 <outlet property="subLabel" destination="Kq1-PU-kgW" id="gmS-GH-une"/>
@@ -66,4 +80,7 @@
             <point key="canvasLocation" x="175" y="386"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="edit_sjieshao_up" width="299" height="43"/>
+    </resources>
 </document>
