--- a/IOSModelBay/Views&Controllers/Ranking/Views/MB_RankingTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Ranking/Views/MB_RankingTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -9,63 +9,92 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MB_RankingTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="262"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qQR-KI-WVX">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="299"/>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="WKP-KX-PdQ">
-                        <rect key="frame" x="123" y="15" width="75" height="65"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="75" id="5eu-Bt-OaO"/>
-                            <constraint firstAttribute="height" constant="65" id="aHV-3m-PPi"/>
+                            <constraint firstAttribute="height" constant="160" id="OmO-n4-0C7"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDu-Xq-gCz">
-                        <rect key="frame" x="0.0" y="89" width="320" height="21"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i1X-xe-5eu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b.png" translatesAutoresizingMaskIntoConstraints="NO" id="0tp-2J-qn6">
+                                <rect key="frame" x="136" y="17" width="49" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="KIl-7d-WfZ"/>
+                                    <constraint firstAttribute="width" constant="49" id="U7w-qQ-QzB"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WKP-KX-PdQ">
+                                <rect key="frame" x="136" y="34" width="49" height="49"/>
+                                <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="49" id="5eu-Bt-OaO"/>
+                                    <constraint firstAttribute="height" constant="49" id="aHV-3m-PPi"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDu-Xq-gCz">
+                                <rect key="frame" x="0.0" y="98" width="320" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Onn-GE-usS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Onn-GE-usS"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZM-cw-ajf">
+                                <rect key="frame" x="0.0" y="127" width="320" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Hgz-g4-DWo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Hgz-g4-DWo"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Onn-GE-usS"/>
+                            <constraint firstAttribute="trailing" secondItem="LDu-Xq-gCz" secondAttribute="trailing" id="4H7-1w-Tav"/>
+                            <constraint firstAttribute="centerX" secondItem="WKP-KX-PdQ" secondAttribute="centerX" id="940-o9-Lbx"/>
+                            <constraint firstItem="WKP-KX-PdQ" firstAttribute="top" secondItem="i1X-xe-5eu" secondAttribute="top" constant="34" id="D1b-oN-4Zx"/>
+                            <constraint firstItem="aZM-cw-ajf" firstAttribute="top" secondItem="LDu-Xq-gCz" secondAttribute="bottom" constant="8" id="Dnk-1i-kHJ"/>
+                            <constraint firstItem="LDu-Xq-gCz" firstAttribute="top" secondItem="WKP-KX-PdQ" secondAttribute="bottom" constant="15" id="I9R-aB-x5D"/>
+                            <constraint firstItem="aZM-cw-ajf" firstAttribute="leading" secondItem="i1X-xe-5eu" secondAttribute="leading" id="PVe-9T-LiH"/>
+                            <constraint firstItem="LDu-Xq-gCz" firstAttribute="leading" secondItem="i1X-xe-5eu" secondAttribute="leading" id="Xvf-9N-GmD"/>
+                            <constraint firstItem="WKP-KX-PdQ" firstAttribute="top" secondItem="0tp-2J-qn6" secondAttribute="bottom" id="YCR-eB-CBm"/>
+                            <constraint firstAttribute="trailing" secondItem="aZM-cw-ajf" secondAttribute="trailing" id="YpJ-tV-TKQ"/>
+                            <constraint firstAttribute="centerX" secondItem="0tp-2J-qn6" secondAttribute="centerX" id="aa5-Pm-ung"/>
+                            <constraint firstAttribute="height" constant="160" id="og2-pi-4e8"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZM-cw-ajf">
-                        <rect key="frame" x="0.0" y="122" width="320" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Hgz-g4-DWo"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JgO-BY-xao">
-                        <rect key="frame" x="123" y="154" width="75" height="30"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="55" id="g21-iP-qfL"/>
-                            <constraint firstAttribute="height" constant="30" id="mnd-CN-sDp"/>
-                        </constraints>
-                        <state key="normal" title="collect" image="ic_add">
-                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <state key="selected" image="ic_confirm">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="g21-iP-qfL"/>
-                            </mask>
-                        </variation>
-                    </button>
+                    </view>
                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceHorizontal="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HfZ-SQ-YfI">
-                        <rect key="frame" x="0.0" y="189" width="320" height="110"/>
+                        <rect key="frame" x="0.0" y="160" width="320" height="89"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </scrollView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="Oo9-TI-QDZ">
+                        <rect key="frame" x="14" y="153" width="14" height="7"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="14" id="ACY-Xn-xnE"/>
+                            <constraint firstAttribute="height" constant="7" id="s9L-lQ-yNT"/>
+                        </constraints>
+                    </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="num1" translatesAutoresizingMaskIntoConstraints="NO" id="dff-fq-LBw">
                         <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                         <constraints>
@@ -80,42 +109,39 @@
                         </variation>
                     </imageView>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="aZM-cw-ajf" secondAttribute="trailing" id="6ME-jw-Xjx"/>
-                    <constraint firstAttribute="centerX" secondItem="JgO-BY-xao" secondAttribute="centerX" id="8Yl-1Q-Mog"/>
+                    <constraint firstAttribute="trailing" secondItem="i1X-xe-5eu" secondAttribute="trailing" id="D5N-yx-tWu"/>
                     <constraint firstItem="qQR-KI-WVX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Kat-Zc-DHT"/>
-                    <constraint firstItem="aZM-cw-ajf" firstAttribute="top" secondItem="LDu-Xq-gCz" secondAttribute="bottom" constant="12" id="SLu-2u-7dC"/>
-                    <constraint firstItem="LDu-Xq-gCz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Wo1-1f-KGc"/>
+                    <constraint firstItem="HfZ-SQ-YfI" firstAttribute="top" secondItem="Oo9-TI-QDZ" secondAttribute="bottom" id="Muz-5N-tvg"/>
+                    <constraint firstItem="i1X-xe-5eu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="PVW-EG-L5C"/>
                     <constraint firstItem="dff-fq-LBw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="X32-h2-Bkp"/>
                     <constraint firstAttribute="trailing" secondItem="HfZ-SQ-YfI" secondAttribute="trailing" id="XdN-qX-qSa"/>
-                    <constraint firstAttribute="centerX" secondItem="WKP-KX-PdQ" secondAttribute="centerX" id="YZd-nf-xqO"/>
                     <constraint firstItem="HfZ-SQ-YfI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ydk-yh-MHG"/>
                     <constraint firstItem="qQR-KI-WVX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ZYT-pn-sXY"/>
                     <constraint firstItem="dff-fq-LBw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="bMF-bs-E9o"/>
-                    <constraint firstItem="LDu-Xq-gCz" firstAttribute="top" secondItem="WKP-KX-PdQ" secondAttribute="bottom" constant="9" id="fP8-MI-dY8"/>
+                    <constraint firstItem="i1X-xe-5eu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="bwb-xz-Laq"/>
+                    <constraint firstItem="Oo9-TI-QDZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="ciV-Ec-sUr"/>
                     <constraint firstAttribute="bottom" secondItem="qQR-KI-WVX" secondAttribute="bottom" id="fzl-bm-yiv"/>
                     <constraint firstAttribute="trailing" secondItem="qQR-KI-WVX" secondAttribute="trailing" id="g4w-RR-ZgB"/>
-                    <constraint firstItem="aZM-cw-ajf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="gF0-eH-b2W"/>
-                    <constraint firstItem="WKP-KX-PdQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="hP4-lo-WXo"/>
-                    <constraint firstItem="HfZ-SQ-YfI" firstAttribute="top" secondItem="JgO-BY-xao" secondAttribute="bottom" constant="5" id="ix5-gQ-0HS"/>
-                    <constraint firstItem="JgO-BY-xao" firstAttribute="top" secondItem="aZM-cw-ajf" secondAttribute="bottom" constant="11" id="nCV-y6-hmB"/>
                     <constraint firstItem="dff-fq-LBw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="tFh-Dl-FPT"/>
-                    <constraint firstAttribute="trailing" secondItem="LDu-Xq-gCz" secondAttribute="trailing" id="xel-b4-9w8"/>
-                    <constraint firstAttribute="bottom" secondItem="HfZ-SQ-YfI" secondAttribute="bottom" id="yLF-UR-f1g"/>
+                    <constraint firstAttribute="bottom" secondItem="HfZ-SQ-YfI" secondAttribute="bottom" constant="12" id="yLF-UR-f1g"/>
+                    <constraint firstItem="HfZ-SQ-YfI" firstAttribute="top" secondItem="i1X-xe-5eu" secondAttribute="bottom" id="ysj-x3-pfM"/>
                     <constraint firstItem="dff-fq-LBw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="zco-xV-duL"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="X32-h2-Bkp"/>
                         <exclude reference="bMF-bs-E9o"/>
+                        <exclude reference="fzl-bm-yiv"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="ablumScrollView" destination="HfZ-SQ-YfI" id="Kko-gX-FRQ"/>
                 <outlet property="backImageView" destination="qQR-KI-WVX" id="GNd-8L-ODH"/>
-                <outlet property="collectButton" destination="JgO-BY-xao" id="dl6-03-BFI"/>
                 <outlet property="descLabel" destination="aZM-cw-ajf" id="fwu-Gx-Ixi"/>
+                <outlet property="firstImageView" destination="0tp-2J-qn6" id="hnr-6o-P9b"/>
                 <outlet property="rankImageView" destination="dff-fq-LBw" id="ISX-1H-XX8"/>
                 <outlet property="userImageView" destination="WKP-KX-PdQ" id="dqQ-Xb-XBh"/>
                 <outlet property="usernameLabel" destination="LDu-Xq-gCz" id="RsC-uo-vsu"/>
@@ -125,8 +151,7 @@
     </objects>
     <resources>
         <image name="a.png" width="30" height="30"/>
-        <image name="ic_add" width="22" height="22"/>
-        <image name="ic_confirm" width="24" height="24"/>
+        <image name="b.png" width="20" height="20"/>
         <image name="num1" width="36" height="36"/>
     </resources>
 </document>
